--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   material_design_icons_flutter: ^7.0.7296
   flutter_otp_text_field: ^1.2.0
+  audio_waveforms: ^1.1.1
 
 dev_dependencies:
   flutter_test:
